--- a/arch/arm/dts/stm32mp15xx-fsmp1x.dtsi
+++ b/arch/arm/dts/stm32mp15xx-fsmp1x.dtsi
@@ -345,7 +345,7 @@
 	pinctrl-names = "default", "sleep";
 	pinctrl-0 = <&ltdc_pins_a>;
 	pinctrl-1 = <&ltdc_pins_sleep_a>;
-	status = "okay";
+	status = "disabled";
 
 	port {
 		#address-cells = <1>;
@@ -432,7 +432,7 @@
 	pinctrl-0 = <&sdmmc1_b4_pins_a>;
 	pinctrl-1 = <&sdmmc1_b4_od_pins_a>;
 	pinctrl-2 = <&sdmmc1_b4_sleep_pins_a>;
-	cd-gpios = <&gpiob 7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	cd-gpios = <&gpioh 3 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
 	disable-wp;
 	st,neg-edge;
 	bus-width = <4>;
